<resources>
    <string name="app_name">Coachmove Clients</string>
    <string name="default_notification_channel_id">com.coachmovecustomer</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="out_of_memory">Out Of Memory</string>
    <string name="not_sufficient_permissions">Not sufficient permissions for this action\ngoto Settings>Apps>%1$s>Permissions</string>
    <string name="choose_image_source">Choose Image Resource</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_relaunch">"Please relaunch "</string>
    <string name="check_gps">Location Update has encountered a problem. Please Check GPS is ON or OFF</string>
    <string name="gps">" - GPS"</string>
    <string name="file_provider_authority_" translatable="false">com.coachmovecustomer.fileprovider</string>
    <string name="netwrk_status">Network Status</string>
    <string name="retry">Retry</string>
    <string name="are_you_sure_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Por favor espere...</string>
    <string name="ok">Ok</string>
    <string name="serverRespond">Server not responding</string>
    <string name="requestTimeout">Request timeout</string>
    <string name="alert">Alert !1</string>
    <string name="welcome">Welcome</string>
    <string name="getStarted">Sign to Get Started!</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">Enter email address</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPassScreen">Forgot Password</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="account">Don\'t have an account ?</string>
    <string name="alreadyAccount">Already  have an account?</string>
    <string name="signin">Sign In</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="createAccountStr">Sign Up below and Create\n your Account</string>
    <string name="forgot_Str">We Just need your registered email address\n to sent your password Instructions</string>
    <string name="submit">Submit</string>
    <string name="change_Picture">Change Profile Image</string>
    <string name="firstName">First Name</string>
    <string name="firstName_hint">Enter First Name</string>
    <string name="hint_lastName">Enter Last Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="hint_mobileNO">Enter Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="selectFitness">Select Fitness Level</string>
    <string name="next">Next</string>
    <string name="hint_professional">* The professional will have  access to these information</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="surgeries">Surgeries</string>
    <string name="heartDiseases">Heart Diseases</string>
    <string name="jointPains">Joint Pains</string>
    <string name="medications">Use of Medications</string>
    <string name="others">Others</string>
    <string name="termAndCondition">I accept the Terms &amp; Conditions</string>
    <string name="createProfile">Create Profile</string>
    <string name="beginner">Beginner</string>
    <string name="advance">Advance</string>
    <string name="athlete">Athlete</string>
    <string name="sedetancy">Sedetancy</string>
    <string name="newOthers">Others</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="schedule">Schedule</string>
    <string name="diet">Diet</string>
    <string name="workout">Workout</string>
    <string name="anamnesis">Anamnesis</string>
    <string name="financialDate">Financial Date</string>
    <string name="other_hint_txt">Reference site about Lorem Ipsum,giving information on its origins,as well as a random Lipsum generator.</string>
    <string name="myCard">My Cards</string>
    <string name="addNewCard">Add New Card</string>
    <string name="addCard">Add Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_no">CVV Number</string>
    <string name="cardAdded">Card Added Successfully!</string>
    <string name="selectGender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="selectNeighbourhood">Select Neighbourhood</string>
    <string name="selectModality">Select Modality</string>
    <string name="address">Address</string>
    <string name="addAddress">Add Address</string>
    <string name="addCity">Add City</string>
    <string name="noPeople">Number of People</string>
    <string name="coachGender">Gender of Coach</string>
    <string name="search">Search</string>
    <string name="searchNameId">Enter name or id of the coach</string>
    <string name="searchNameIdMsg">Enter name or id of the user</string>
    <string name="feedback_hint">Your feedback will make this App better \n for everyone.</string>
    <string name="session_hint">How was the session ?</string>
    <string name="review">Review</string>
    <string name="reviewHint">Add review</string>
    <string name="session_hint_diet">How was the session ?</string>
    <string name="termsConditions">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="myCards">My Cards</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="notifications">Notifications</string>
    <string name="are_you_sure_want_to_Logout">Are you sure you want to Logout?</string>
    <string name="deleteCard">Delete Card</string>
    <string name="noNotification">No notification found</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="fillSubject">Enter subject</string>
    <string name="briefDescription">Give brief description</string>
    <string name="sendMessage">Send Message</string>
    <string name="comments">20 Comments</string>
    <string name="noMessage">No conversation found</string>
    <string name="newComments">Comments</string>
    <string name="dateTime">Date &amp; Time</string>
    <string name="confirmPay">Confirm and pay</string>
    <string name="hint_workoutLimit">*Please kindly note that the limit time to cancel your workout is 2 hours before, or it will be charged R$15,00</string>
    <string name="coach">Coach</string>
    <string name="awesome">Awesome!</string>
    <string name="paymentApproved">Your payment has been approved!</string>
    <string name="okThanks">Okay! Thanks.</string>
    <string name="upcoming">Upcoming</string>
    <string name="ongoing">Ongoing</string>
    <string name="ongoingProcess">ongoing...</string>
    <string name="completed">Completed</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="addPeople">Add People</string>
    <string name="update">Update</string>
    <string name="editImage">Edit Profile Image</string>
    <string name="editProfile">Edit Profile</string>
    <string name="coaches">Coaches</string>
    <string name="payments">Payments</string>
    <string name="feedback">Feedback</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="settings">Settings</string>
    <string name="termCond">Terms &amp; Conditions</string>
    <string name="coachName_ID">Enter  Name and Id of the coach</string>
    <string name="nameUser_ID">Enter Name or User Id</string>
    <string name="email_register_alert">Please enter registered email address</string>
    <string name="email_alert">Please enter email address</string>
    <string name="valid_email">Please enter valid email address.</string>
    <string name="passwordEmpty">Please enter password</string>
    <string name="passwordLength">Password must be at least 8 characters</string>
    <string name="confirmEmpty">Please re-enter password</string>
    <string name="passwordconfirmpassword">Password doesn\'t match</string>
    <string name="ireceived">I received</string>
    <string name="select_action">Select action</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="select_camera">Capture from camera</string>
    <string-array name="SelectModality">
        <item>Select Modality</item>
        <item>Functional trainment</item>
        <item>Calisthenics</item>
        <item>Running</item>
        <item>Martial arts</item>
        <item>Yoga</item>
        <item>Slack line</item>
        <item>Kangoo</item>
        <item>Body building</item>
        <item>Best age</item>
        <item>Flexibility</item>
        <item>Athletics</item>
        <item>Soccer Training</item>
        <item>Pilates</item>
        <item>Abdomen</item>
    </string-array>
    <string name="confirmation">Confirmation</string>
    <string name="sureConfirm">Are you sure you want to Confirm?</string>
    <string name="doneDiet">Done</string>
    <string name="cancelDiet">Cancel</string>
    <string name="contact_url_ccheck">Please, before send us your question click here and have a look if your question is already answered on our website.</string>
</resources>