<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/accountTV"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp">

        <com.coachmovecustomer.customviews.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="@dimen/_28sp" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/getStarted"
            android:textColor="@color/Gray"
            android:textSize="@dimen/_16sp" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="left|center"
            android:text="@string/email_address"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:gravity="left"
            android:singleLine="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/passwordET"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle"/>


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="left|center"
            android:text="@string/password"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:gravity="left"
            android:hint="@string/hint_password"
            android:digits="1234567890!@#$%^*qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle" />


        <com.coachmovecustomer.customviews.ButtonView
            android:id="@+id/signInBTN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/round_button"
            android:text="@string/signIn"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:id="@+id/forgotPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/forgotPass"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sp" />

    </LinearLayout>

    <com.coachmovecustomer.customviews.RegularTextView
        android:id="@+id/accountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/signUpTV"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:text="@string/account"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:textSize="@dimen/_14sp" />

    <com.coachmovecustomer.customviews.RegularTextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sp" />

</RelativeLayout>