<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/accountTV"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp">

        <com.coachmovecustomer.customviews.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="@dimen/_28sp" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createAccountStr"
            android:textColor="@color/Gray"
            android:textSize="@dimen/_16sp" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="left|center"
            android:text="@string/email_address"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/emailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:gravity="left"
            android:singleLine="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/passwordEDT"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="left|center"
            android:text="@string/password"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/passwordEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:digits="1234567890!@#$%^*qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:gravity="left|center"
            android:hint="@string/hint_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:nextFocusForward="@+id/confirm_passwordEDT"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="left|center"
            android:text="@string/confirmPass"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/confirm_passwordEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:digits="1234567890!@#$%^*qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:gravity="left"
            android:singleLine="true"
            android:hint="@string/confirmPass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle" />


        <com.coachmovecustomer.customviews.ButtonView
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/round_button"
            android:text="@string/signup"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp" />


    </LinearLayout>

    <com.coachmovecustomer.customviews.RegularTextView
        android:id="@+id/accountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInTV"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:text="@string/alreadyAccount"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:textSize="@dimen/_14sp" />

    <com.coachmovecustomer.customviews.RegularTextView
        android:id="@+id/signInTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/signin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sp" />

</RelativeLayout>