<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/account_text"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:src="@drawable/key" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_Str"
            android:textColor="@color/Black" />


        <com.coachmovecustomer.customviews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="left|center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/email_address"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp" />


        <com.coachmovecustomer.customviews.RegularEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="left"
            android:singleLine="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_14sp"
            android:theme="@style/editTextStyle"
            android:imeOptions="actionDone"/>


        <com.coachmovecustomer.customviews.ButtonView
            android:id="@+id/submitBTN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp" />


    </LinearLayout>

</RelativeLayout>